# os

./: .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  x86_64-os.json
arch/x86_64/: Makefile  boot.asm  grub.cfg  long_mode_init.asm
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
src/: lib.rs  vga_buffer.rs
src/asm/: boot.asm  lib.asm  loader.asm  multiboot_header.asm
src/c/: console.c  driver.c  io.c  kernel.c  string.c  vga.c
src/c/include/: asm_macros.h  console.h  lib.h  multiboot2.h  print.h  serial.h  string.h  type.h  vga.h
src/c/x86_64/: console.c  kernel.c  mem.c  serial.c  stdio.c  stdlib.c  video.c
src/c/x86_64/include/: idt.h  math.h  multiboot2.h  stdarg.h  stdio.h  stdlib.h  type.h  vbe.h  video.h
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/resources/: grub.cfg
